force-app/main/default/objects/Course__c/fields/Type_of_Course__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Course__c</fullName>
    <label>Type of Course</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Non-Technical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>